# Huffman

./: .gitignore  BitReader.cpp  BitReader.h  CMakeLists.txt  Heap.cpp  README.md  coding.h  reader.cpp  writer.cpp
include/: BitReader.h  BitWriter.h  Heap.h  Huffman.h  coding.h
src/: BitReader.cpp  BitWriter.cpp  Heap.cpp  Huffman.cpp  reader.cpp  writer.cpp
src/reader.o.dSYM/Contents/: Info.plist
test_files/: a.dec  a.enc  a.txt  b.dec  b.enc  b.txt  big2.dec  big2.enc  big2.txt  bigOut  output.txt  readerMap.txt
